<resources>
    <string name="app_name">RestoranAdmin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Prijava</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
	
	
    <string name="action_settings">Settings</string>
    <string name="hello_world">Action Bar</string>
    <string name="btn_send_message">Send Message</string>

    <!-- Activity titles -->
    <string name="activity_location_found">Location Found</string>

    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>

    <!-- Search  -->
    <string name="search_hint">Search color..</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="all">sve</string>
    <string name="make_order">make order</string>
    <string name="split_order">split order</string>
    <string name="number_of_table">broj stola</string>
    <string name="is_it_paid">is it paid</string>
    <string name="kategory_string">kategorija</string>
    <string name="paid_string">placena</string>
    <string name="new_item_string">nova stavka</string>
    <string name="fragmentUserInfo">Fragment User Info</string>
    <string name="nameOfApp">Restoran</string>
    <string name="Logo_description">Restoran</string>




    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_user_info">user info</string>
    <string name="action_logout">logout</string>
    <string name="button_record">snimi</string>
    <string name="edit">izmeni</string>
    <string name="remove">izbrisi</string>
    <string name="in_new_order">u novu </string>
    <string name="ok_button">ok</string>
    <string name="cancel_button">cancel</string>
    <string name="logout_message"> Da li ste sigurni da zelite da se izlogujete ? </string>
    <string name="userinfo">licne informacije</string>
    <string name="add_new_user">kreiraj novog korisnika</string>
    <string name="users_list">lista korisnika</string>
    <string name="list_rezervation">lista naridzbina</string>
    <string name="add_menu_item">dodaj stavku</string>
    <string name="menu_time_list">lista stavki</string>
    <string name="logout_string">odjavi se</string>
    <string name="password">Sifra</string>
    <string name="activity_list_users">lista korisnika</string>
    <string name="title_edtiUsername">izmena podataka</string>
    <string name="type">Tip korisnika</string>
    <string name="newitemname">ime nove stavke</string>
    <string name="price_string">cena</string>
    <string name="snimljeno">snimljeno</string>
    <string name="obavezniparametri">MOlim Vas unesite obavezne parametre</string>
    <string name="loseunetparametar">lose uneti parametri</string>
    <string name="nemanistazasplit">Nista niste selektovali za split akciju</string>
    <string name="username_and_string">Morate uneti korisničko ime i sifru</string>
    <string name="atentifitacionFaild">Prijava nije uspela</string>
    <string name="notvalidEmail">Meil adresa nije validna</string>
</resources>
